--- a/Front-end/decouvrir.css
+++ b/Front-end/decouvrir.css
@@ -1,109 +1,27 @@
-body {
-    font-family: Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+body{
     margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-    color: #333;
-    margin-top: 70px; 
+    background-color: #000;
+    color: #eee;
+    font-family: Poppins;
+    font-size: 12px;
 }
-
-header {
-    background-color: rgba(47, 82, 51, 0.8); 
-    height: 70px; 
-    display: flex; /* Flexbox pour aligner les éléments */
-    align-items: center;
-    padding: 0 2em; 
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000; /* Toujours au-dessus */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.header-container {
-    display: flex;
-    align-items: center; /* Centrage vertical */
-    justify-content: flex-start; /* Tout aligne à gauche */
-    width: 100%; 
-    gap: 2em; 
-}
-
-/* Logo */
-.logo {
-    display: flex;
-    align-items: center; /* Centre le logo verticalement */
-    margin-right: 1em; 
-}
-
-.logo img {
-    height: 120px; 
-    width: auto; 
-    cursor: pointer; /* Pointeur au survol */
-}
-
-.nav-links {
-    list-style: none;
-    display: flex; /* Les liens sont alignés horizontalement */
-    gap: 3em; 
-    margin: 0;
-    padding: 0;
-    margin-left: 0;
-}
-
-.nav-links li {
-    margin: 0;
-}
-
-.nav-links li a {
-    font-size: 13px; /* Taille fixe en pixels */
-}
-
-.nav-links a {
-    color: #f0ecdc; 
-    text-decoration: none; /* Supprime le soulignement */
-    font-weight: bold;
-    font-size: 2%;
-    transition: color 0.3s ease;
-    
-}
-
-
-.nav-links a:hover {
-    color: #a7a876; /* Couleur au survol */
-}
-
-.Inscription {
-    display: flex; /* Aligne l'icône et le texte en ligne */
-    align-items: center; /* Centre verticalement */
-    justify-content: center; /* Centre le contenu horizontalement */
-    background-color: #ffbd59b8; 
-    color: #fff; 
-    padding: 0.5em 1.5em;
-    border: none;
-    border-radius: 5px;
-    font-size: 1em;
-    font-weight: bold;
+a{
     text-decoration: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    margin-left: auto; 
-    margin-right: 3em; 
 }
-
-.Inscription:hover {
-    background-color: #8ca24e;
-    color: #fff;
+header{
+    width: 1300px;
+    max-width: 80%;
+    margin: auto;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 100; 
 }
-
-.Inscription .icon {
-    width: 14px; 
-    height: auto; /* Conserve les proportions */
-    margin-right: 8px; 
-}
-
-.Inscription i {
-    margin-right: 8px; 
-    font-size: 1.2em;
+header a{
+    color: #eee;
+    margin-right: 40px;
 }
 
 #parc-plan {
