--- a/Front-end/la-bergerie-des-reptiles.css
+++ b/Front-end/la-bergerie-des-reptiles.css
@@ -38,8 +38,8 @@ header a {
     inset: 0 0 0 0;
 }
 .carousel .list .item img {
-    width: 60%;
-    height: 80%;
+    width: 70%;
+    height: 100%;
     object-fit: cover;
 }
 .carousel .list .item .content {
@@ -51,7 +51,7 @@ header a {
     transform: translateX(-50%);
     padding-right: 30%;
     box-sizing: border-box;
-    color: ##FFFF00; /* Changement de la couleur pour correspondre au thème reptile */
+    color: #FFFF00; /* Changement de la couleur pour correspondre au thème reptile */
     text-shadow: 0 5px 10px #0004;
 }
 
@@ -83,12 +83,12 @@ header a {
 /* thumbail */
 .thumbnail {
     position: absolute;
-    bottom: 50px;
+    bottom: 30px;
     left: 10%;
     width: max-content;
     z-index: 100;
     display: flex;
-    gap: 20px;
+    gap: 100px;
     overflow-x: auto;
     scroll-behavior: smooth;
 }
@@ -98,13 +98,13 @@ header a {
 }
 
 .thumbnail .item {
-    width: 150px;
+    width: 300px;
     height: 220px;
     flex-shrink: 0;
     position: relative;
 }
 .thumbnail .item img {
-    width: 100%;
+    width: 110%;
     height: 100%;
     object-fit: cover;
     border-radius: 20px;
