--- a/Front-end/decouvrir.css
+++ b/Front-end/decouvrir.css
@@ -1,23 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body{
     margin: 0;
-    background-color: #000;
-    color: #eee;
     font-family: Poppins;
-    font-size: 12px;
+    font-size: 15px;
+    font-size: bold;
+    background-color: #000;
 }
 a{
     text-decoration: none;
 }
 header{
-    width: 1300px;
-    max-width: 80%;
+    
+    max-width: 100%;
     margin: auto;
     height: 50px;
     display: flex;
     align-items: center;
-    position: relative;
-    z-index: 100; 
+    position: fixed;
+    left: 350px;
+    z-index: 100;
+
 }
 header a{
     color: #eee;
