--- a/Front-end/decouvrir.css
+++ b/Front-end/decouvrir.css
@@ -4,7 +4,7 @@ body{
     font-family: Poppins;
     font-size: 15px;
     font-size: bold;
-    background-color: #000;
+    background-color: #ECE8DD;
 }
 a{
     text-decoration: none;
@@ -22,7 +22,7 @@ header{
 
 }
 header a{
-    color: #eee;
+    color: #000;
     margin-right: 40px;
 
 
@@ -54,4 +54,23 @@ area {
 
 area:hover {
     outline: 2px solid rgba(255, 0, 0, 0.5); /* met en surbrillance la zone cliquable */
+}
+/* Section Description */
+.description-section {
+    text-align: center;
+    padding: 2em;
+    background-color: #ECE8DD;
+}
+
+.description-section h2 {
+    color: #000;
+    font-size: 1.8em;
+    margin-top: 4em;
+}
+
+.description-section p {
+    font-size: 1em;
+    color: #333;
+    line-height: 1.5;
+    margin-top: 1em;
 }
